--- a/app/src/main/res/layout/activity_earnings.xml
+++ b/app/src/main/res/layout/activity_earnings.xml
@@ -72,31 +72,52 @@
             android:elevation="190dp"
             card_view:cardCornerRadius="70px">
 
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="39dp"
-                android:text="Earning Details"
-                android:textSize="15sp"
-                android:textColor="#000"/>
+                android:layout_marginTop="25dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="58dp"
-                android:text="Aug 10 - 17"
-                android:textSize="12sp" />
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="17dp"
+                    android:elevation="20dp"
+                    android:src="@mipmap/arrow_right" />
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="280dp"
-                android:layout_marginTop="35dp"
-                android:elevation="20dp"
-                android:src="@mipmap/arrow_right" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="20dp"
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Earning Details"
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Aug 10 - 17"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginLeft="120dp"
+                    android:elevation="20dp"
+                    android:src="@mipmap/arrow_right" />
+
+            </LinearLayout>
+
 
             <TableRow
                 android:layout_width="match_parent"
@@ -106,30 +127,51 @@
                 android:layout_marginRight="20dp"
                 android:background="#a0a0a0" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="135dp"
-                android:text="Recent Transactions"
-                android:textSize="15sp"
-                android:textColor="#000"/>
+                android:layout_marginTop="123dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="155dp"
-                android:text="Earnings this week"
-                android:textSize="12sp" />
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="17dp"
+                    android:elevation="20dp"
+                    android:src="@mipmap/arrow_right" />
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="280dp"
-                android:layout_marginTop="130dp"
-                android:elevation="20dp"
-                android:src="@mipmap/arrow_right" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="20dp"
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Recent Transactions"
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="$45.90"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginLeft="85dp"
+                    android:elevation="20dp"
+                    android:src="@mipmap/arrow_right" />
+
+            </LinearLayout>
 
 
             <TableRow
@@ -141,60 +183,104 @@
                 android:layout_marginRight="20dp"
                 android:background="#a0a0a0" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="225dp"
-                android:text="Promotions"
-                android:textSize="15sp"
-                android:textColor="#000"/>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="245dp"
-                android:layout_marginBottom="40dp"
-                android:text="Earnings this week"
-                android:textSize="12sp" />
+                android:layout_marginTop="220dp"
+                android:layout_marginBottom="25dp"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="280dp"
-                android:layout_marginTop="228dp"
-                android:elevation="20dp"
-                android:src="@mipmap/arrow_right" />
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="17dp"
+                    android:elevation="20dp"
+                    android:src="@mipmap/arrow_right" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="20dp"
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Promotions"
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="See what's available"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginLeft="110dp"
+                    android:elevation="20dp"
+                    android:src="@mipmap/arrow_right" />
+
+            </LinearLayout>
 
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="490dp"
-            android:text="Refer &amp; Earn"
-            android:textSize="15sp"
-            android:textColor="#000"/>
+            android:layout_marginTop="480dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="25dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="510dp"
-            android:layout_marginBottom="40dp"
-            android:text="Get paid for referring \nnew drivers to Zoom"
-            android:textSize="12sp" />
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="25dp"
+                android:elevation="20dp"
+                android:src="@mipmap/arrow_right" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="295dp"
-            android:layout_marginTop="490dp"
-            android:src="@mipmap/arrow_right"
-            android:elevation="20dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Refer &amp; Earn"
+                    android:textSize="15sp"
+                    android:textColor="#000"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Get paid for referring\nnew drivers for Zoom"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="17dp"
+                android:layout_marginLeft="105dp"
+                android:elevation="20dp"
+                android:src="@mipmap/arrow_right" />
+
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
@@ -203,13 +289,14 @@
         android:orientation="horizontal"
         android:layout_margin="40dp"
         android:layout_marginLeft="60dp"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="14dp"
-            android:src="@drawable/ic_baseline_notifications_off_24"/>
+            android:layout_marginTop="8dp"
+            android:src="@drawable/ic_schedule_payment"/>
 
         <LinearLayout
             android:layout_marginLeft="10dp"
@@ -221,7 +308,7 @@
                 android:gravity="bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Silent Mode"
+                android:text="Schedule Payment"
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:textSize="17sp"/>
@@ -230,8 +317,8 @@
                 android:gravity="top"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Your notifications are silent"
-                android:textColor="#fff"
+                android:text="Set a payment\nschedule"
+                android:textColor="#eee"
                 android:textSize="12sp" />
 
         </LinearLayout>
@@ -246,11 +333,21 @@
 
         <ToggleButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/colorPrimary"/>
 
     </LinearLayout>
 
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_style"
+        android:text="Cash out"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="#000"
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
