--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -188,7 +188,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your notifications are silent"
-                android:textColor="#fff"
+                android:textColor="#eee"
                 android:textSize="12sp" />
 
         </LinearLayout>
@@ -202,6 +202,18 @@
             android:src="@mipmap/toggle"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_style"
+        android:text="Logout"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="#000"
+        android:layout_marginTop="40dp"/>
 
 
 
