--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -72,6 +72,7 @@
                 android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="280dp"
