--- a/app/src/main/res/layout/activity_earnings.xml
+++ b/app/src/main/res/layout/activity_earnings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="@color/colorPrimary"
-    android:orientation="vertical"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/card"
         android:layout_margin="6dp"
         android:backgroundTint="#FAFAFA"
         card_view:cardCornerRadius="100px">
@@ -33,7 +33,7 @@
                 android:layout_weight="3"
                 android:gravity="center"
                 android:text="My Earnings"
-                android:textSize="22sp" />
+                android:textSize="20sp" />
 
             <ImageView
                 android:layout_width="0dp"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="80dp"
             android:text="This week"
             android:textColor="@color/colorPrimary"
             android:textSize="12sp" />
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="100dp"
             android:text="$340.50"
             android:textColor="#000"
             android:textSize="20sp" />
@@ -67,12 +67,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="150dp"
             android:layout_marginRight="16dp"
             android:elevation="190dp"
             card_view:cardCornerRadius="70px">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
@@ -82,7 +82,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="27dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
                     android:elevation="20dp"
                     android:src="@drawable/ic_pie_chart" />
@@ -90,7 +90,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="20dp"
+                    android:layout_centerVertical="true"
                     android:layout_height="wrap_content">
 
 
@@ -98,12 +98,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Earning Details"
+                        android:layout_marginLeft="50dp"
                         android:textSize="15sp"
                         android:textColor="#000"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="50dp"
                         android:text="Aug 10 - 17"
                         android:textSize="12sp" />
 
@@ -113,11 +115,13 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="17dp"
-                    android:layout_marginLeft="120dp"
                     android:elevation="20dp"
-                    android:src="@mipmap/arrow_right" />
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="30dp"
+                    android:src="@mipmap/arrow_right"
+                    android:layout_alignParentRight="true" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
 
             <TableRow
@@ -128,7 +132,7 @@
                 android:layout_marginRight="20dp"
                 android:background="#a0a0a0" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="123dp"
@@ -154,12 +158,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Recent Transactions"
+                        android:layout_marginLeft="50dp"
                         android:textSize="15sp"
                         android:textColor="#000"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="50dp"
                         android:text="$45.90"
                         android:textSize="12sp" />
 
@@ -170,11 +176,12 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="17dp"
-                    android:layout_marginLeft="84dp"
                     android:elevation="20dp"
-                    android:src="@mipmap/arrow_right" />
+                    android:layout_marginRight="30dp"
+                    android:src="@mipmap/arrow_right"
+                    android:layout_alignParentRight="true" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
 
             <TableRow
@@ -182,12 +189,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="210dp"
                 android:layout_marginRight="20dp"
                 android:background="#a0a0a0" />
 
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="220dp"
@@ -214,6 +221,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Promotions"
+                        android:layout_marginLeft="50dp"
                         android:textSize="15sp"
                         android:textColor="#000"/>
 
@@ -221,6 +229,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="See what's available"
+                        android:layout_marginLeft="50dp"
                         android:textSize="12sp" />
 
                 </LinearLayout>
@@ -229,21 +238,22 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="17dp"
-                    android:layout_marginLeft="111dp"
                     android:elevation="20dp"
-                    android:src="@mipmap/arrow_right" />
+                    android:layout_marginRight="30dp"
+                    android:src="@mipmap/arrow_right"
+                    android:layout_alignParentRight="true" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
 
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="480dp"
+            android:layout_marginTop="455dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -266,11 +276,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Refer &amp; Earn"
+                    android:layout_marginLeft="50dp"
                     android:textSize="15sp"
                     android:textColor="#000"/>
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:layout_marginLeft="50dp"
                     android:layout_height="wrap_content"
                     android:text="Get paid for referring\nnew drivers for Zoom"
                     android:textSize="12sp" />
@@ -281,19 +293,21 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="17dp"
-                android:layout_marginLeft="105dp"
                 android:elevation="20dp"
-                android:src="@mipmap/arrow_right" />
+                android:layout_marginRight="45dp"
+                android:src="@mipmap/arrow_right"
+                android:layout_alignParentRight="true" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
         android:layout_marginLeft="35dp"
+        android:layout_below="@+id/card"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -314,39 +328,40 @@
                 android:gravity="bottom"
                 android:text="Schedule Payment"
                 android:textColor="#fff"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:textSize="17sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="top"
-                android:text="Set a payment\nschedule"
-                android:textColor="#eee"
+                android:text="Set a payment schedule"
+                android:textColor="#f0f0f0"
                 android:textSize="12sp" />
 
         </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/toggle_menu"
-                    android:background="@color/colorPrimary"
-                    android:layout_marginLeft="75dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/toggle"/>
+        <ImageView
+            android:id="@+id/toggle_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="75dp"
+            android:background="@color/colorPrimary"
+            android:src="@mipmap/toggle" />
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/button_style"
         android:text="Cash out"
         android:textAllCaps="false"
+        android:layout_alignParentBottom="true"
         android:textStyle="bold"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColor="#000"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="#000"/>
 
-</LinearLayout>
+</RelativeLayout>
