--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -9,8 +9,9 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="543dp"
+        android:layout_height="wrap_content"
         android:layout_margin="6dp"
+        android:id="@+id/card"
         android:backgroundTint="#FAFAFA"
         card_view:cardCornerRadius="100px">
 
@@ -48,20 +49,24 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="140dp"
             android:layout_marginLeft="16dp"
             android:elevation="190dp"
             card_view:cardCornerRadius="70px"
             android:layout_marginRight="16dp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$340.50"
-                android:layout_marginTop="39dp"
+                android:layout_marginTop="35dp"
+                android:textColor="#000"
                 android:layout_marginLeft="30dp"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:textSize="15sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -75,82 +80,99 @@
                 android:id="@+id/earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="280dp"
                 android:elevation="40px"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="25dp"
-                android:src="@mipmap/arrow_right" />
+                android:src="@mipmap/arrow_right"
+                android:layout_alignParentRight="true" />
+            </RelativeLayout>
+
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:layout_marginTop="288dp"
+            android:layout_marginTop="268dp"
             android:layout_marginLeft="16dp"
             android:elevation="190dp"
             card_view:cardCornerRadius="70px"
             android:layout_marginRight="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profile"
-                android:layout_marginTop="39dp"
-                android:layout_marginLeft="30dp"
-                android:textSize="17sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Edit your profile"
-                android:layout_marginTop="58dp"
-                android:layout_marginLeft="30dp"
-                android:textSize="12sp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="280dp"
-                android:elevation="40px"
-                android:layout_marginTop="25dp"
-                android:src="@mipmap/arrow_right" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Profile"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Edit your Profile"
+                    android:layout_marginTop="58dp"
+                    android:layout_marginLeft="30dp"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:elevation="40px"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:src="@mipmap/arrow_right"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:layout_marginTop="415dp"
+            android:layout_marginTop="395dp"
             android:layout_marginLeft="16dp"
             android:elevation="190dp"
+            android:layout_marginBottom="16dp"
             card_view:cardCornerRadius="70px"
             android:layout_marginRight="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Account"
-                android:layout_marginTop="39dp"
-                android:layout_marginLeft="30dp"
-                android:textSize="17dp"
-                android:textStyle="bold" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Edit your account"
-                android:layout_marginTop="58dp"
-                android:layout_marginLeft="30dp"
-                android:textSize="12sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Account"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="#000"
+                    android:textSize="15sp"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="280dp"
-                android:elevation="40px"
-                android:layout_marginTop="25dp"
-                android:src="@mipmap/arrow_right" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Edit your Account"
+                    android:layout_marginTop="60dp"
+                    android:layout_marginLeft="30dp"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:elevation="40px"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:src="@mipmap/arrow_right"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
 
@@ -159,8 +181,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_margin="40dp"
-        android:layout_marginLeft="60dp"
+        android:layout_below="@+id/card"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_height="50dp">
 
         <ImageView
@@ -181,7 +204,6 @@
                 android:layout_height="wrap_content"
                 android:text="Silent Mode"
                 android:textColor="#fff"
-                android:textStyle="bold"
                 android:textSize="17sp"/>
 
             <TextView
@@ -189,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your notifications are silent"
-                android:textColor="#eee"
+                android:textColor="#f0f0f0"
                 android:textSize="12sp" />
 
         </LinearLayout>
@@ -198,8 +220,8 @@
             android:id="@+id/toggle_menu"
             android:background="@color/colorPrimary"
             android:layout_marginLeft="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@mipmap/toggle"/>
 
     </LinearLayout>
@@ -213,9 +235,10 @@
         android:textStyle="bold"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:textColor="#000"
-        android:layout_marginTop="40dp"/>
+        android:layout_alignParentBottom="true"/>
 
 
 
-    </LinearLayout>
+    </RelativeLayout>
