Added QueryUtils, Ride

--- a/app/src/main/res/layout/activity_earnings.xml
+++ b/app/src/main/res/layout/activity_earnings.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="80dp"
-            android:text="This week"
+            android:text="This month"
             android:textColor="@color/colorPrimary"
             android:textSize="12sp" />
 
