--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -60,9 +60,10 @@
                 android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/earnings_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$340.50"
+                tools:text="$0.00"
                 android:layout_marginTop="35dp"
                 android:textColor="#000"
                 android:layout_marginLeft="30dp"
@@ -71,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Earnings this week"
+                android:text="Earnings this month"
                 android:layout_marginTop="58dp"
                 android:layout_marginLeft="30dp"
                 android:textSize="12sp" />
@@ -227,6 +228,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/logout_button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/button_style"
