Added DDB.java, added CRUD

--- a/app/src/main/res/layout/activity_earnings.xml
+++ b/app/src/main/res/layout/activity_earnings.xml
@@ -54,11 +54,12 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/earnings_month_act_earning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="100dp"
-            android:text="$340.50"
+            tools:text="$340.50"
             android:textColor="#000"
             android:textSize="20sp" />
 
