--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -60,7 +60,7 @@
                 android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/earnings_month"
+                android:id="@+id/earnings_month_act_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="$0.00"
