--- a/app/src/main/res/layout/activity_add_ride.xml
+++ b/app/src/main/res/layout/activity_add_ride.xml
@@ -36,6 +36,7 @@
         android:layout_margin="10dp" />
 
     <Button
+        android:id="@+id/post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -43,9 +44,10 @@
         android:layout_gravity="center_horizontal"/>
 
     <Button
+        android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="Delete "
+        android:text="Delete Table"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
