Completed get, post functionality

--- a/app/src/main/res/layout/activity_ride.xml
+++ b/app/src/main/res/layout/activity_ride.xml
@@ -74,6 +74,7 @@
                 android:textColor="@color/colorPrimaryDark"/>
 
             <TextView
+                android:id="@+id/earn_ride"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
