--- a/app/src/main/res/layout/activity_earnings.xml
+++ b/app/src/main/res/layout/activity_earnings.xml
@@ -164,6 +164,7 @@
                         android:textColor="#000"/>
 
                     <TextView
+                        android:id="@+id/earnings_ride_act_earning"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="50dp"
